--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaimin Patel - Portfolio</title>
     <!-- <link rel="stylesheet" href="/index.css"> -->
-    <link rel="stylesheet" href="/FrontendWork/public/index.css">
+    <link rel="stylesheet" href="public/index.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
                 <li><a href="#aboutMe">About</a></li>
                 <li><a href="#Projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><img id="changeMode" onclick="mode()" src="/FrontendWork/public/lamp1.jpg" alt="dark-mode" style="height:50px; 
+                <li><img id="changeMode" onclick="mode()" src="public/lamp1.jpg" alt="dark-mode" style="height:50px; 
                 border-radius: 25px; 
                 position: relative; 
                 bottom: 12px;"></li>
@@ -50,7 +50,7 @@
                 <h2>Hello, I'm <span id="specialChar2" style="color: hwb(340 5% 12%)">Jaimin</span> patel</h2>
                 <p class="typing-text"></p>
                 <button id="btn-1">
-                    <a href="/FrontendWork/public/jaimin-resume.pdf" download>My Resume</a>
+                    <a href="public/jaimin-resume.pdf" download>My Resume</a>
                     <!-- <a href="/jaimin-resume.pdf" download>My Resume</a> -->
                 </button>
                 <button id="btn-2">
@@ -77,7 +77,7 @@
         <div class="project-card1">
             <span id="prj-img1">
                 <!-- <img src="/MusclesHub.png" alt="MusclesHub Project"> -->
-                <img src="/FrontendWork/public/MusclesHub.png" alt="MusclesHub Project">
+                <img src="public/MusclesHub.png" alt="MusclesHub Project">
             </span>
 
             <span id="text1">
@@ -105,7 +105,7 @@
             </span>
             <span id="prj-img2">
                 <!-- <img src="/vrs.png" alt="VRS-vehicle Rental System"> -->
-                <img src="/FrontendWork/public/vrs.png" alt="VRS-vehicle Rental System">
+                <img src="public/vrs.png" alt="VRS-vehicle Rental System">
             </span>
 
         </div>
@@ -122,7 +122,7 @@
             </span>
             <span id="prj-img3">
                 <!-- <img src="/spotify.png" alt="spotify"> -->
-                <img src="/FrontendWork/public/spotify.png" alt="spotify">
+                <img src="public/spotify.png" alt="spotify">
             </span>
 
         </div>
@@ -197,7 +197,7 @@
         <div class="card-aboutme3">
             <p style="background-color: #1e1e1e;">currently working on:</p>
             <!-- <img src="/react.png" alt="react logo"> -->
-            <img src="/FrontendWork/public/react.png" alt="react logo">
+            <img src="public/react.png" alt="react logo">
             <p style="background-color: #1e1e1e;">React.Js</p>
             <p style="background-color: #1e1e1e;">TextUtils project which help user to modify the huge bundle of text.
             </p>
@@ -237,20 +237,20 @@
 
     <footer>
         <!-- <a href="https://github.com/jaimiin5"><img src="/git.png" placeholder="Github"></a> -->
-        <a href="https://github.com/jaimiin5"><img src="/FrontendWork/public/git.png" placeholder="Github"></a>
+        <a href="https://github.com/jaimiin5"><img src="public/git.png" placeholder="Github"></a>
 
         <!-- <a href="https://www.linkedin.com/in/jaimin-patel-672873250"><img
                 style="border:1px solid rgb(255, 255, 255); border-radius: 5px;" src="/linkedin.png"></a> -->
 
         <a href="https://www.linkedin.com/in/jaimin-patel-672873250"><img
                 style="border:1px solid rgb(255, 255, 255); border-radius: 5px;"
-                src="/FrontendWork/public/linkedin.png"></a>
+                src="public/linkedin.png"></a>
         <p>&copy; All rights reserved.</p>
     </footer>
 
 
     <!-- contact script here -->
-    <script src="/FrontendWork/public/contact.js"></script>
+    <script src="public/contact.js"></script>
     <!-- <script src="/contact.js"></script> -->
 
     <!-- fontAwesome icon src -->
