Update index.html with @resume

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <p class="typing-text"></p>
                 <button id="btn-1">
                     <a href="public/jaimin-resume.pdf" download>My Resume</a>
-                    <!-- <a href="/jaimin-resume.pdf" download>My Resume</a> -->
+                    <!-- <a href="/jaimin@resume.pdf" download>My Resume</a> -->
                 </button>
                 <button id="btn-2">
                     <a href="#contact">Connect with Me</a>
