Update index.html resume again

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <h2>Hello, I'm <span id="specialChar2" style="color: hwb(340 5% 12%)">Jaimin</span> patel</h2>
                 <p class="typing-text"></p>
                 <button id="btn-1">
-                    <a href="public/jaimin-resume.pdf" download>My Resume</a>
+                    <a href="public/jaimin@resume.pdf" download>My Resume</a>
                     <!-- <a href="/jaimin@resume.pdf" download>My Resume</a> -->
                 </button>
                 <button id="btn-2">
